gui/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gui-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - gui-gateway
  http:
  - match:
    - uri:
        exact: /gui    
    - uri:
        prefix: /gui/
    route:
    - destination:
        host: gui-service
        port:
          number: 80
