gui/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: gui-app
  labels:
    app: gui-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gui-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: gui-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: gui-config
            items:
            - key: config.json
              path: config.json
      containers:
        - name: gui
          image: registry.local:5000/micropet/gui:dev
          imagePullPolicy: Always
          ports:
            - name: gui
              containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/assets/config                            
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gui-service
  labels:
    app: gui-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: gui
      port: 80
  selector:
    app: gui-app
    group: micro-pet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gui-ingress  
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`gui.dev.pet-cluster.demo`)
    kind: Rule
    services:
    - name: gui-service
      port: 80
